# raggy-duckdb

./: .gitignore  README.md  justfile  pyproject.toml
conf/: config.toml  config_ollama.toml
notebooks/: mo_check_data_load.py
scripts/: check_together.py  embed_check_together.py  get_together_models.py
sql/: check_documents_with_null_embedding.sql  create_tables.sql  get_file_metadata.sql  insert_or_update_ingested_file.sql
src/raggy_duckdb/: __init__.py  cli.py  config.py  db.py  log.py  model_backends.py  rag_pipeline.py  repo_ingest.py
