[project]
name = "raggy-duckdb"
version = "0.1.2"
description = "DuckDB in RAG application with LLMs via Ollama or Together.ai"
readme = "README.md"
authors = [{ name = "Michael Booth", email = "michael@databooth.com.au" }]
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "duckdb>=1.3.2",
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "together>=1.5.21",
]

[project.scripts]
raggy-duckdb = "raggy_duckdb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.14.13",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
]
